--- a/snack4/index.html
+++ b/snack4/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
